# RMQ-notifications

./: .dockerignore  .dockerignore.dev  .env.example  README.md  alembic.ini  asyncapi.json  deploy.Dockerfile  dev.Dockerfile  docker-compose.yml  hello.py  log_config.json  pyproject.toml  ruff.toml
.github/workflows/: python-test.yml  tests.yml
deploy/: entrypoint.sh
deploy/dev/: dev.Dockerfile  docker-compose.yml
deploy/prod/: docker-compose.yml  prod.Dockerfile
docker/: docker-compose.yml
src/: bootstrap.py  exceptions.py  main.py  middleware.py  middlewares.py  routers.py  settings.py
src/api/: health_check.py  root_router.py
src/api/internals/: internal_router.py
src/api/internals/v1/: router.py
src/api/v1/: gateway_router.py  router.py  v1_router.py
src/api/v1/email_routers/: __init__.py  confirm.py  emails_router.py  recovery.py
src/api/v1/routers/: recovery_password.py  send_confirm_email.py  send_recovery_password.py
src/app/: exceptions.py  notification_registry.py
src/app/depends/: __init__.py  notification_handlers.py  providers_depends.py  services.py  services_depends.py  tasks.py  use_cases.py  use_cases_depends.py
src/app/notification_handlers/: __init__.py
src/app/notification_handlers/impls/: confirm_email.py  recovery_password.py
src/app/providers/: __init__.py  api_access.py
src/app/providers/impls/: api_access.py
src/app/providers/protocols/: api_access_protocol.py
src/app/services/: __init__.py  email_service.py  send_email.py
src/app/services/impls/: email.py  email_service.py
src/app/services/protocols/: email_service_protocol.py
src/app/tasks/: __init__.py  email_tasks.py  rmq_consumer.py  serve.py
src/app/use_cases/: __init__.py  email_use_case.py  send_email_use_case.py
src/app/use_cases/impls/: email_use_case.py
src/app/use_cases/protocols/: email_protocol.py  email_use_case_protocol.py
src/core/: __init__.py  depends.py  exceptions.py  log_config.json  loggers.py  schemas.py
src/core/middlewares/: logger_middleware.py
src/core/templates/: reset_pass.html
src/core/utils/: logging_utils.py
src/notifications/: bootstrap.py  depends.py  main.py  settings.py
src/notifications/app/: exceptions.py  notification_registry.py
src/notifications/app/depends/: __init__.py  message_queues.py  notification_handlers.py  services.py  tasks.py  use_cases.py
src/notifications/app/dispatchers/: __init__.py  email_dispatcher.py
src/notifications/app/dto/: base.py  email_message.py
src/notifications/app/exceptions/: __init__.py  domain_errors.py  infrastructure_exceptions.py
src/notifications/app/notification_handlers/: __init__.py  hendler_protocol.py
src/notifications/app/services/: __init__.py
src/notifications/app/tasks/: rmq_consumer.py
src/notifications/app/use_cases/: __init__.py
src/notifications/application/common/: types.py  validators.py
src/notifications/application/interactors/: __init__.py  add_recipient.py  bulk_email.py  change_email_recipient.py  change_username_recipient.py  delete_recipient.py  (+2 more)
src/notifications/core/: __init__.py  exceptions.py  loggers.py  settings.py
src/notifications/depends/: __init__.py  message_queues.py  services.py  tasks.py  use_cases.py
src/notifications/main/: bootstrap.py  main.py
src/resources/email/: email_signatures.json
tests/: conftest.py  pytest.ini  test_fake.py
tests/fixtures/: __init__.py  amqp.py  const.py  db.py  email.py  email_fixtures.py  email_sender.py  emails.py  rmq.py  test_const.py  test_emails.py  test_rmq.py
tests/unit/: test_dispatchers.py  test_email_sender.py  test_email_service.py  test_email_templates_service.py  test_emails_service.py  test_handlers.py  test_notification_registry.py  test_rmq_consume.py  test_templates.py
(+144 files in other folders)
