[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-notifications"
version = "0.1.0"
description = "Microservice for sending notifications at the request of the main application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dishka>=1.5.3",
    "fastapi-mail>=1.4.2",
    "faststream[rabbit]>=0.5.40",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "pyright>=1.1.394",
    "mypy>=1.15.0",
]

[tool.setuptools]
packages = ["notifications"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
notifications = ["py.typed"]

[tool.black]
line-length = 80
target-version = ['py312']

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]
python_version = "3.12"

explicit_package_bases = true
strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
allow_untyped_calls = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
disallow_untyped_defs = true
